EpamWorkout Swarzmuller Burger Aplication - insert into database and form validity.

--- a/epam_workout_vol3_burger/src/scss/main.scss
+++ b/epam_workout_vol3_burger/src/scss/main.scss
@@ -18,4 +18,13 @@
 @import "./SideDrawer";
 @import "./DrawerToggle";
 
+@import "./Spinner";
+@import "./CheckoutSummary";
+
+@import "./ContactData";
+
+@import "./Order";
+
+@import "./Input";
+
 
