--- a/epam_workout_vol3_burger/src/scss/main.css
+++ b/epam_workout_vol3_burger/src/scss/main.css
@@ -15,7 +15,7 @@
   width: 100%;
   margin: auto;
   height: 250px;
-  overflow: scroll;
+  overflow: auto;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem; }
@@ -235,6 +235,10 @@
   margin: 4px;
   font-weight: bold; }
 
+.Button:disabled {
+  color: grey;
+  cursor: not-allowed; }
+
 .Success {
   color: #5C9210; }
 
@@ -381,5 +385,135 @@
 @media (min-width: 500px) {
   .DrawerToggle {
     display: none; } }
+.Loader,
+.Loader:before,
+.Loader:after {
+  border-radius: 50%; }
+
+.Loader {
+  color: #521751;
+  font-size: 11px;
+  text-indent: -99999em;
+  margin: 55px auto;
+  position: relative;
+  width: 10em;
+  height: 10em;
+  box-shadow: inset 0 0 0 1em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0); }
+
+.Loader:before,
+.Loader:after {
+  position: absolute;
+  content: ''; }
+
+.Loader:before {
+  width: 5.2em;
+  height: 10.2em;
+  background: #fff;
+  border-radius: 10.2em 0 0 10.2em;
+  top: -0.1em;
+  left: -0.1em;
+  -webkit-transform-origin: 5.2em 5.1em;
+  transform-origin: 5.2em 5.1em;
+  -webkit-animation: load2 2s infinite ease 1.5s;
+  animation: load2 2s infinite ease 1.5s; }
+
+.Loader:after {
+  width: 5.2em;
+  height: 10.2em;
+  background: #fff;
+  border-radius: 0 10.2em 10.2em 0;
+  top: -0.1em;
+  left: 5.1em;
+  -webkit-transform-origin: 0px 5.1em;
+  transform-origin: 0px 5.1em;
+  -webkit-animation: load2 2s infinite ease;
+  animation: load2 2s infinite ease; }
+
+@-webkit-keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+.CheckoutSummary {
+  text-align: center;
+  width: 80%;
+  margin: auto; }
+
+.CheckoutSummaryButtons {
+  text-align: center;
+  margin-top: 10%; }
+
+.BurgerCheckoutSummaryWrapper {
+  width: 100%;
+  height: 300px;
+  margin: auto; }
+
+@media screen and (min-width: 0px) and (max-width: 500px) {
+  .BurgerCheckoutSummaryWrapper {
+    height: 172px; } }
+@media (min-width: 600px) {
+  .CheckoutSummary {
+    width: 500px; } }
+.ContactData {
+  margin: 20px auto;
+  width: 80%;
+  text-align: center;
+  box-shadow: 0 2px 3px #ccc;
+  border: 1px solid #eee;
+  padding: 10px;
+  box-sizing: border-box; }
+  .ContactData input {
+    display: block; }
+
+@media (min-width: 600px) {
+  .ContactData {
+    width: 500px; } }
+.Order {
+  width: 80%;
+  border: 1px solid #eee;
+  box-shadow: 0 2px 3px #ccc;
+  padding: 10px;
+  margin: 10px auto;
+  box-sizing: border-box; }
+
+.Input {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box; }
+
+.Label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 8px; }
+
+.InputElement {
+  outline: none;
+  border: 1px solid #ccc;
+  background-color: white;
+  font: inherit;
+  padding: 6px 10px;
+  display: block;
+  width: 100%;
+  box-sizing: border-box; }
+
+.InputElement:focus {
+  outline: none;
+  background-color: #ccc; }
+
+.Invalid {
+  border: 1px solid red;
+  background-color: #fa797c; }
 
 /*# sourceMappingURL=main.css.map */
